# lab04

./: .travis.yml  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  LICENSE  README.md  appveyor.yml
.github/workflows/: ci.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt  solver_app-0.1.0.0-Linux.deb
_build/_CPack_Packages/Linux/DEB/solver_app-0.1.0.0-Linux/: control  md5sums
_build/_CPack_Packages/Linux/RPM/: rpmbuildsolver-app.err  rpmbuildsolver-app.out
_build/_CPack_Packages/Linux/RPM/RPMS/: solver_app-0.1.0.0-Linux.rpm
_build/_CPack_Packages/Linux/RPM/SPECS/: solver-app.spec  solver-app.spec.in
_build/_CPack_Packages/Linux/RPM/solver_app-0.1.0.0-Linux/usr/share/doc/solver-app/: README.md
_build/formatter_ex_lib/: Makefile  cmake_install.cmake
_build/formatter_lib/: Makefile  cmake_install.cmake
_build/hello_world_application/: Makefile  cmake_install.cmake
_build/solver_application/: Makefile  cmake_install.cmake  solver_app
_build/solver_lib/: Makefile  cmake_install.cmake
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt  hello_world.cpp
solver_application/: CMakeLists.txt  equation.cpp
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_application/_build/formatter_ex_lib_build/: Makefile  cmake_install.cmake
solver_application/_build/formatter_ex_lib_build/formatter_lib_build/: Makefile  cmake_install.cmake
solver_application/_build/solver_lib_build/: Makefile  cmake_install.cmake
solver_lib/: CMakeLists.txt  solver.cpp
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
