cmake_minimum_required(VERSION 3.4)
project(formatter_ex_lib)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../formatter_lib formatter_lib_build)

add_library(formatter_ex STATIC 
    ${CMAKE_CURRENT_SOURCE_DIR}/formatter_ex.cpp
)

target_include_directories(formatter_ex PUBLIC 
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(formatter_ex PUBLIC formatter)
